<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingBottom="16dp"/>

    <EditText
        android:id="@+id/editTextNuevaClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonGuardarClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_password"
        android:layout_marginTop="16dp"/>
</LinearLayout>
