<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bienvenida"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BienvenidaActivity"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Primer CardView para el saludo -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:src="@drawable/baseline_face_2_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="24dp"
                    android:layout_marginEnd="24dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_text"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/imageViewAvatar"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginStart="35dp"
                android:paddingBottom="16dp"/>
        </androidx.cardview.widget.CardView>

        <!-- Segundo CardView para los botones -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/buttonPosicionGlobal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/global_position"
                    app:icon="@drawable/baseline_visibility_24" />
                <Button
                    android:id="@+id/movimientos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movements"
                    android:layout_marginTop="8dp"
                    app:icon="@drawable/baseline_upload_24"/>

                <Button
                    android:id="@+id/buttontrasnferencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/transfers"
                    android:layout_marginTop="8dp"
                    app:icon="@drawable/baseline_swap_horizontal_circle_24"
                    />

                <Button
                    android:id="@+id/buttonCambiarClave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:layout_marginTop="8dp"
                    app:icon="@drawable/baseline_edit_24"/>

                <Button
                    android:id="@+id/buttonpromociones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/promotions"
                    app:icon="@drawable/baseline_card_giftcard_24" />
                <Button
                    android:id="@+id/buttonCajeros"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/atms"
                    android:layout_marginTop="8dp"
                    app:icon="@drawable/baseline_map_24"/>

                <Button
                    android:id="@+id/buttonSalir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/exit_button"
                    app:icon="@drawable/baseline_arrow_back_24" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:navigationIcon="@drawable/baseline_menu_24"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_assured_workload_24"
        app:layout_anchor="@id/bottomAppBar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
